--- a/i18n/vi_VN.po
+++ b/i18n/vi_VN.po
@@ -6,26 +6,29 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-27 01:28+0000\n"
-"PO-Revision-Date: 2022-04-27 08:34+0700\n"
-"Last-Translator: Nihta\n"
+"POT-Creation-Date: 2022-04-29 04:01+0000\n"
+"PO-Revision-Date: 2022-04-29 04:01+0000\n"
+"Last-Translator: \n"
 "Language-Team: \n"
-"Language: vi_VN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-"X-Generator: Poedit 3.0.1\n"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__active
 msgid "Active"
-msgstr "Hoạt động"
+msgstr "Cho phép thuê"
+
+#. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__brand_id
+msgid "Brand"
+msgstr "Hãng xe"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__cc
 msgid "CC"
-msgstr ""
+msgstr "cc"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__category_id
@@ -38,7 +41,23 @@ msgid "Category name"
 msgstr "Tên dòng xe"
 
 #. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__chassis_number
+msgid "Chassis number"
+msgstr "Số khung"
+
+#. module: motorbike_rental
+#: model:ir.model.fields,help:motorbike_rental.field_mbr_motorcycle__chassis_number
+msgid "Chassis number of motorcycle"
+msgstr "Số khung xe máy"
+
+#. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__country_id
+msgid "Country"
+msgstr "Quốc gia"
+
+#. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__create_uid
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__create_uid
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__create_uid
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__create_uid
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__create_uid
@@ -47,6 +66,7 @@ msgstr "Được tạo bởi"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__create_date
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__create_date
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__create_date
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__create_date
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__create_date
@@ -54,14 +74,11 @@ msgid "Created on"
 msgstr "Được tạo lúc"
 
 #. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__currency_id
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__currency_id
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__currency_id
 msgid "Currency"
 msgstr "Đơn vị tiền tệ"
-
-#. module: motorbike_rental
-#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__current_price
-msgid "Current Price"
-msgstr "Giá hiện tại"
 
 #. module: motorbike_rental
 #: model:ir.model.fields.selection,name:motorbike_rental.selection__mbr_motorcycle_price__unit__day
@@ -70,15 +87,21 @@ msgstr "Ngày"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__description
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__description
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__description
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__description
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__description
-#: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_view_form
 msgid "Description"
 msgstr "Mô tả"
 
 #. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__discount
+msgid "Discount"
+msgstr "Chiết khấu"
+
+#. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__display_name
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__display_name
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__display_name
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__display_name
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__display_name
@@ -91,6 +114,16 @@ msgid "Duration"
 msgstr "Khoảng thời gian"
 
 #. module: motorbike_rental
+#: model:ir.model.constraint,message:motorbike_rental.constraint_mbr_motorcycle_price_motorcycle_id_duration_unit_unique
+msgid "Duration and Unit must be unique!"
+msgstr "Khoảng thời gian và đơn vị thời gian không được trùng nhau!"
+
+#. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__extra_day_df_price
+msgid "Extra price default (day)"
+msgstr ""
+
+#. module: motorbike_rental
 #: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_model_view_form
 #: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_view_form
 msgid "General"
@@ -98,11 +131,12 @@ msgstr "Thông tin chung"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__id
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__id
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__id
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__id
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__id
 msgid "ID"
-msgstr "ID"
+msgstr ""
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__image
@@ -111,6 +145,7 @@ msgstr "Hình ảnh"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle____last_update
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand____last_update
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category____last_update
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model____last_update
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price____last_update
@@ -119,6 +154,7 @@ msgstr "Chỉnh sửa lần cuối vào"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__write_uid
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__write_uid
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__write_uid
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__write_uid
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__write_uid
@@ -127,11 +163,22 @@ msgstr "Cập nhật lần cuối bởi"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__write_date
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__write_date
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__write_date
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__write_date
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__write_date
 msgid "Last Updated on"
 msgstr "Cập nhật lần cuối lúc"
+
+#. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__license_plate
+msgid "License plate"
+msgstr "Biển số xe"
+
+#. module: motorbike_rental
+#: model:ir.model.fields,help:motorbike_rental.field_mbr_motorcycle__license_plate
+msgid "License plate of motorcycle"
+msgstr "Biển số xe máy"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__mode_id
@@ -146,7 +193,12 @@ msgstr "Tháng"
 #. module: motorbike_rental
 #: model:ir.actions.act_window,name:motorbike_rental.mbr_motorcycle_action
 msgid "Motorbike"
-msgstr ""
+msgstr "Xe máy"
+
+#. module: motorbike_rental
+#: model:ir.ui.menu,name:motorbike_rental.mbr_motorcycle_brand_menu_action
+msgid "Motorbike brand"
+msgstr "Hãng xe"
 
 #. module: motorbike_rental
 #: model:ir.ui.menu,name:motorbike_rental.mbr_motorcycle_category_menu_action
@@ -156,7 +208,7 @@ msgstr "Dòng xe"
 #. module: motorbike_rental
 #: model:ir.ui.menu,name:motorbike_rental.mbr_menu_root
 msgid "Motorbike rental"
-msgstr ""
+msgstr "Thuê xe máy"
 
 #. module: motorbike_rental
 #: model:ir.model,name:motorbike_rental.model_mbr_motorcycle
@@ -164,6 +216,17 @@ msgstr ""
 #: model:ir.ui.menu,name:motorbike_rental.mbr_motorcycle_menu
 msgid "Motorcycle"
 msgstr "Xe máy"
+
+#. module: motorbike_rental
+#: model:ir.actions.act_window,name:motorbike_rental.mbr_motorcycle_brand_action
+msgid "Motorcycle band"
+msgstr "Hãng xe"
+
+#. module: motorbike_rental
+#: model:ir.model,name:motorbike_rental.model_mbr_motorcycle_brand
+#: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_brand_view_tree
+msgid "Motorcycle brand"
+msgstr "Hãng xe"
 
 #. module: motorbike_rental
 #: model:ir.actions.act_window,name:motorbike_rental.mbr_motorcycle_category_action
@@ -174,16 +237,16 @@ msgstr "Dòng xe"
 #. module: motorbike_rental
 #: model:ir.actions.act_window,name:motorbike_rental.mbr_motorcycle_model_action
 #: model:ir.model,name:motorbike_rental.model_mbr_motorcycle_model
-#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__motorcycle_id
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__motorcycle_model_id
 #: model:ir.ui.menu,name:motorbike_rental.mbr_motorcycle_model_menu_action
 msgid "Motorcycle model"
 msgstr "Mẫu xe"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__name
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_brand__name
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_category__name
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__name
-#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__name
 msgid "Name"
 msgstr "Tên"
 
@@ -193,40 +256,56 @@ msgid "No data"
 msgstr "Không có dữ liệu"
 
 #. module: motorbike_rental
+#: model_terms:ir.actions.act_window,help:motorbike_rental.mbr_motorcycle_brand_action
+msgid "No motorcycle brand yet."
+msgstr "Không có hãng xe nào."
+
+#. module: motorbike_rental
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__price
 msgid "Price"
 msgstr "Giá"
 
 #. module: motorbike_rental
-#: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_model_view_form
-msgid "Rent cost"
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__rent_cost_df_day
+msgid "Rent cost default (day)"
 msgstr "Giá thuê"
 
 #. module: motorbike_rental
-#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__rent_cost_default_day
-msgid "Rent cost default (day)"
-msgstr ""
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__rent_cost_df_month
+msgid "Rent cost default (month)"
+msgstr "Giá thuê"
 
 #. module: motorbike_rental
-#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__rent_cost_default
-msgid "Rent cost default (hour)"
-msgstr ""
-
-#. module: motorbike_rental
-#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__rent_cost_default_week
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__rent_cost_df_week
 msgid "Rent cost default (week)"
-msgstr ""
+msgstr "Giá thuê"
 
 #. module: motorbike_rental
-#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__price_ids
-#: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_view_form
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__price_ids
+#: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_model_view_form
+#: model_terms:ir.ui.view,arch_db:motorbike_rental.mbr_motorcycle_price_view_tree
 msgid "Rental pricing"
 msgstr "Giá cho thuê"
+
+#. module: motorbike_rental
+#: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_price__sequence
+msgid "Sequence"
+msgstr "Thứ tự"
 
 #. module: motorbike_rental
 #: model:ir.ui.menu,name:motorbike_rental.mbr_motorcycle_settings_menu
 msgid "Settings"
 msgstr "Cài đặt"
+
+#. module: motorbike_rental
+#: model:ir.model.constraint,message:motorbike_rental.constraint_mbr_motorcycle_brand_name_uniq
+msgid "The name of the motorcycle brand must be unique!"
+msgstr "Tên của hãng xe phải là duy nhất!"
+
+#. module: motorbike_rental
+#: model:ir.model.constraint,message:motorbike_rental.constraint_mbr_motorcycle_category_name_uniq
+msgid "The name of the motorcycle category must be unique!"
+msgstr "Tên của danh mục xes phải là duy nhất!"
 
 #. module: motorbike_rental
 #: model:ir.model.constraint,message:motorbike_rental.constraint_mbr_motorcycle_model_name_uniq
@@ -247,7 +326,7 @@ msgstr "Tuần"
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle__year
 #: model:ir.model.fields,field_description:motorbike_rental.field_mbr_motorcycle_model__year
 msgid "Year"
-msgstr "Năm"
+msgstr "Năm sản xuất"
 
 #. module: motorbike_rental
 #: model:ir.model.fields,help:motorbike_rental.field_mbr_motorcycle__year
